[gd_scene load_steps=8 format=3 uid="uid://w21k2qf8gfuu"]

[ext_resource type="Script" path="res://scripts/cursor.gd" id="1_n3t4e"]
[ext_resource type="Texture2D" uid="uid://bk1m6i41rycqs" path="res://textures/Cursor_orange.tres" id="2_bb2ml"]
[ext_resource type="Texture2D" uid="uid://ccsjb08kp8e3b" path="res://textures/cursor_light_orange.tres" id="3_m1e1t"]
[ext_resource type="Texture2D" uid="uid://topvwof3cqno" path="res://0_PNG/particles/cursor/cursor_sparkle_orange.png" id="4_5qxc8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hi4xi"]
particles_animation = true
particles_anim_h_frames = 9
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fvcfg"]
lifetime_randomness = 0.4
emission_shape = 3
emission_box_extents = Vector3(5, 5, 1)
particle_flag_disable_z = true
gravity = Vector3(0, -93, 0)
initial_velocity_max = 2.5
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
turbulence_enabled = true
turbulence_noise_scale = 1.81
anim_speed_min = 0.3
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrh5"]
size = Vector2(9, 9)

[node name="Cursor" type="StaticBody2D"]
collision_layer = 8
script = ExtResource("1_n3t4e")

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 9, 0, 18, 9, 18, 12, 12, 18, 9, 18, 0, 9)

[node name="Cursor" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(32, 32)
texture = ExtResource("2_bb2ml")

[node name="CursorLight" type="PointLight2D" parent="."]
scale = Vector2(0.5, 0.5)
energy = 1.5
shadow_enabled = true
texture = ExtResource("3_m1e1t")

[node name="Sparkle" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_hi4xi")
position = Vector2(5, 8)
emitting = false
process_material = SubResource("ParticleProcessMaterial_fvcfg")
texture = ExtResource("4_5qxc8")
lifetime = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_onrh5")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
